<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onBoardingFragment">

    <fragment
        android:id="@+id/destination_map"
        android:name="com.kksionek.gdzietentramwaj.map.view.MapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:label="@string/app_name">
        <action
            android:id="@+id/action_nav_graph_to_settingsFragment"
            app:destination="@id/destination_settings"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/destination_map" />
    </fragment>

    <fragment
        android:id="@+id/destination_settings"
        android:name="com.kksionek.gdzietentramwaj.settings.view.SettingsFragment"
        android:label="@string/settings">
        <action
            android:id="@+id/action_destination_settings_to_favoriteFragment"
            app:destination="@id/destination_favorite"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/destination_settings" />
        <action
            android:id="@+id/action_destination_settings_to_chooseStartLocationFragment"
            app:destination="@id/destination_chooseStartLocation"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim" />
    </fragment>

    <fragment
        android:id="@+id/destination_favorite"
        android:name="com.kksionek.gdzietentramwaj.favorite.view.FavoriteFragment"
        android:label="@string/destination_favorite_title" />

    <fragment
        android:id="@+id/destination_chooseStartLocation"
        android:name="com.kksionek.gdzietentramwaj.settings.view.ChooseStartLocationFragment"
        android:label="@string/destination_chooseStartLocation_title" />
    <fragment
        android:id="@+id/onBoardingFragment"
        android:name="com.kksionek.gdzietentramwaj.onboarding.view.OnBoardingFragment"
        android:label="@string/app_name" >
        <action
            android:id="@+id/action_onBoardingFragment_to_destination_map"
            app:destination="@id/destination_map"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"
            app:popUpTo="@+id/onBoardingFragment"
            app:popUpToInclusive="true" />
    </fragment>
</navigation>